--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,63 @@
 <resources>
-    <string name="app_name">SGKSMember_New</string>
+    <string name="app_name">SGKS</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="ok_button">OK</string>
+    <string name="noInternet">Please check your internet connection</string>
+    <string name="q_and_a"><![CDATA[Q & A]]></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="optional_api_error">Oops! Something went wrong</string>
+    <string name="add_me_sgks">Add Me To SGKS</string>
+    <string name="suggestion_box">SGKS Suggestions Box</string>
+    <string name="member_details">Member Details</string>
+    <string name="contactUs">Contact Us</string>
+    <string name="healthPlus">SGKS Health Plus</string>
+    <string name="help">Help</string>
+    <string name="privacyPolicy">Privacy Policy</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="news_title_image">news title image</string>
+    <string name="news_type_birthday">birthday</string>
+    <string name="news_type_nidhan">nidhan</string>
+    <string name="news_type_achievement">achievement</string>
+    <string name="news_type_tag">news type tag</string>
+    <string name="news_type_general">general</string>
+    <string name="classified_details_title">Classified Details</string>
+    <string name="message_details_title">Message Details</string>
+    <string name="city_name_pune">PUNE</string>
+    <string name="city_name_navsari">NAVSARI</string>
+    <string name="contact_info_navsari">Shree Gurjar Kshatriya Samaj, Navsari</string>
+    <string name="contact_info_pune">Shree Gurjar Kshatriya Samaj, Pune (Halar Vibhag)</string>
+    <string name="sgks_reg_number_navsari">Reg. No: A|645|2015|NAVSARI</string>
+    <string name="sgks_reg_number_pune">Reg. No: MAHA|5971|2016|PUNE</string>
+    <string name="sgks_address_navsari">Address : Laxmi Nagar 1, Near Gopal Nagar, Vijalpore, Navsari, Gujrat 396450. Email ID : navsari@kadiyasamaj.com</string>
+    <string name="sgks_address_pune">Address : 5th Floor, Siddhi Towers, Above Rupee Bank, Kondhwa, Pune, Maharashtra 411048. Email ID : sgksmediapune@gmail.com</string>
+    <string name="sgks_contact_navsari">Contact No : 09601169059</string>
+    <string name="sgks_contact_pune">Contact No : +91 8983 851851</string>
+    <string name="tag_local_storage_sync">localDataSync</string>
+    <string name="settings">Settings</string>
+    <string name="notification_title_database_sync_in_progress">SGKS Data Sync In Progress</string>
+    <string name="notification_detail_please_wait">Please wait, this may take some time</string>
+    <string name="toast_select_city">Please Select SGKS City</string>
+    <string name="databse_sync_enabled_info">Enabled, app will sync data locally</string>
+    <string name="databse_sync_disabled_info">Disabled, app will not sync data locally</string>
+    <string name="toast_databse_sync_enabled">Data Sync Enabled</string>
+    <string name="toast_databse_sync_disabled">Data Sync Disabled</string>
+    <string name="offline_support_enabled_info">Enabled, app will work offline if data is synchronized locally</string>
+    <string name="toast_offline_support_enabled">Enabled, app will offline</string>
+    <string name="offline_support_disabled_info">Offline Support Disabled</string>
+    <string name="toast_offline_support_disabled">Offline Support Disabled</string>
+    <string name="toast_you_are_offline">You are offline, some functionality may not work.</string>
+    <string name="alert_sync_failed">Data will not sync if you are not connected to internet.\nYou can still use application offline.</string>
+    <string name="toast_allowed_characters_member_search">Allowed characters are A-Z a-z 0-9 - and space only</string>
+    <string name="search_name_surname_member_id">Search Members</string>
+    <string name="member_image">committee member image</string>
+    <string name="accounts">Accounts</string>
+    <string name="select_year">Select Year</string>
+    <string name="permission_required">Permission required to save image.</string>
+    <string name="committee_details_title">Committee Details</string>
+    <string name="event_details_title">Event Details</string>
+    <string name="amroli">Amroli</string>
+    <string name="city_name_amroli">AMROLI</string>
+    <string name="contact_info_amroli">Shree Gurjar Kshatriya Samaj, Amroli (Halar Vibhag)</string>
+    <string name="sgks_address_amroli">Address : 87-88, Jalaram society, Opp. Vishwakarma temple, Amroli, Surat, Gujarat</string>
 </resources>
