--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="enter_first_name">Enter First Name</string>
     <string name="enter_middle_name">Enter Middle Name</string>
     <string name="enter_last_name">Enter Last Name</string>
-    <string name="enter_contactNumber">Enter Contact Number</string>
+    <string name="enter_contactNumber">Enter Mobile Number</string>
     <string name="enter_email">Enter Email Address</string>
     <string name="select_gender">Select Gender</string>
     <string name="select_dateOfBirth">Select Date of Birth</string>
