--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,11 @@
     <string name="q_and_a"><![CDATA[Q & A]]></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="optional_api_error">Oops! Something went wrong</string>
-    <string name="add_me_sgks">Add Me To SGKS</string>
-    <string name="suggestion_box">SGKS Suggestions Box</string>
+    <string name="add_me_sgks">Add Me To SGKKS</string>
+    <string name="suggestion_box">SGKKS Suggestions Box</string>
     <string name="member_details">Member Details</string>
     <string name="contactUs">Contact Us</string>
-    <string name="healthPlus">SGKS Health Plus</string>
+    <string name="healthPlus">SGKKS Health Plus</string>
     <string name="help">Help</string>
     <string name="privacyPolicy">Privacy Policy</string>
     <!-- TODO: Remove or change this placeholder text -->
@@ -35,9 +35,9 @@
     <string name="sgks_contact_pune">Contact No : +91 8983 851851</string>
     <string name="tag_local_storage_sync">localDataSync</string>
     <string name="settings">Settings</string>
-    <string name="notification_title_database_sync_in_progress">SGKS Data Sync In Progress</string>
+    <string name="notification_title_database_sync_in_progress">SGKKS Data Sync In Progress</string>
     <string name="notification_detail_please_wait">Please wait, this may take some time</string>
-    <string name="toast_select_city">Please Select SGKS City</string>
+    <string name="toast_select_city">Please Select SGKKS City</string>
     <string name="databse_sync_enabled_info">Enabled, app will sync data locally</string>
     <string name="databse_sync_disabled_info">Disabled, app will not sync data locally</string>
     <string name="toast_databse_sync_enabled">Data Sync Enabled</string>
