--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="general_gj">સામાન્ય</string>
     <string name="dialog_title_gj">સંદેશ રંગ કોડ</string>
     <string name="dialog_title_en">Message Color Code</string>
+    <string name="press_again_to_exit">Press again to exit</string>
 </resources>
